test/ns3.l1.out
entry: var params, 1 locals, 0 temps
error: invalid raw symbol table
             mknsraw	(builtin function)
               entry	(ns3.l1:3)
