test/ns3.l1
stab = mktab();
tabinsert(stab, "test", 0x1);
mknsraw(c32le, mktab(), stab);

